@@ -47,7 +47,24 @@ main (int argc, char **argv)
   if (argc == 2)
     reps = atoi (argv[1]);
 
-  mpz_inits (bs, t, dest, refdest, dividend, divisor, NULL);
+  mpz_inits (bs, t, refdest, dividend, NULL);
+
+  mpz_init_set_si (dest, -3);
+  mpz_init_set_ui (divisor, 3);
+  pwr = mpz_remove (dest, dividend, divisor);
+
+  /* Perhaps we shouldn't check pwr... */
+  if (pwr != 0 || mpz_cmp_ui (dest, 0) != 0)
+    {
+      fprintf (stderr, "ERROR with zero test\n");
+      fprintf (stderr, "refpower = %lu\n", 0);
+      fprintf (stderr, "   power = %lu\n", pwr);
+      fprintf (stderr, "    op1 = "); debug_mp (dividend);
+      fprintf (stderr, "    op2 = "); debug_mp (divisor);
+      fprintf (stderr, "refdest = 0\n");
+      fprintf (stderr, "   dest = "); debug_mp (dest);
+      abort ();
+    }
 
   for (i = 0; i < reps; i++)
     {
@@ -68,6 +85,8 @@ main (int argc, char **argv)
 
       mpz_urandomb (bs, rands, 32);
       exp = mpz_get_ui (bs) % (5 + 10000 / mpz_sizeinbase (divisor, 2));
+      if (mpz_get_ui (bs) & 2)
+	mpz_neg (divisor, divisor);
       mpz_pow_ui (t, divisor, exp);
       mpz_mul (dividend, dividend, t);
 
